manifests/deployment.yaml
---
# Source: forecastle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "v1.0.143"
    chart: "forecastle-v1.0.143"
    release: "forecastle"
    heritage: "Helm"
  name: forecastle
  namespace: forecastle
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      labels:
        app: forecastle
        group: com.stakater.platform
        provider: stakater
      annotations:
        checksum/api-config: eeb9e4969f580c2ace074e1d98b86274e3374f0ada1270df81f579c0347ca293
    spec:
      containers:
        - securityContext: {}
          image: "stakater/forecastle:v1.0.143"
          name: forecastle
          volumeMounts:
            - name: forecastle-config
              mountPath: /etc/forecastle
      volumes:
        - name: forecastle-config
          configMap:
            name: forecastle
      serviceAccountName: forecastle
